--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.122",
     "@types/http-errors": "^2.0.2",
+    "@types/uuid": "^9.0.5",
     "@types/ws": "^8.5.6",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
@@ -48,6 +49,7 @@
     "http-errors": "^2.0.0",
     "p-queue": "^6.6.2",
     "preact-render-to-string": "^6.2.2",
-    "serverless-plugin-log-retention": "^2.0.0"
+    "serverless-plugin-log-retention": "^2.0.0",
+    "uuid": "^9.0.1"
   }
 }
