--- a/serverless.yml
+++ b/serverless.yml
@@ -393,7 +393,7 @@ functions:
     timeout: 900
     events:
       - schedule:
-          rate: rate(7 days)
+          rate: rate(1 day)
           enabled: ${self:custom.enablePolling.${self:provider.stage}}
     iamRoleStatementsName: ${self:service}-${self:provider.stage}-syncSubscriber-cleanUp-${self:provider.region}
     iamRoleStatements:
