--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.122",
     "@types/http-errors": "^2.0.2",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/uuid": "^9.0.5",
     "@types/ws": "^8.5.6",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
@@ -25,6 +26,7 @@
     "serverless": "^3.35.2",
     "serverless-domain-manager": "^7.1.2",
     "serverless-iam-roles-per-function": "^3.2.0",
+    "serverless-offline": "^13.2.0",
     "serverless-plugin-typescript": "^2.1.5",
     "serverless-prune-plugin": "^2.0.2",
     "ts-node": "^10.9.1",
@@ -47,6 +49,7 @@
     "@middy/http-header-normalizer": "^4.6.4",
     "base64url": "^3.0.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "p-queue": "^6.6.2",
     "preact-render-to-string": "^6.2.2",
     "serverless-plugin-log-retention": "^2.0.0",
