--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.122",
+    "@types/cookie": "^0.5.3",
     "@types/http-errors": "^2.0.2",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/uuid": "^9.0.5",
@@ -46,10 +47,10 @@
     "@aws-sdk/lib-dynamodb": "^3.418.0",
     "@aws-sdk/util-dynamodb": "^3.418.0",
     "@middy/core": "^4.6.4",
-    "@middy/http-cors": "^4.6.5",
     "@middy/http-error-handler": "^4.6.5",
-    "@middy/http-header-normalizer": "^4.6.4",
+    "@middy/http-header-normalizer": "^4.6.5",
     "base64url": "^3.0.1",
+    "cookie": "^0.5.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "p-queue": "^6.6.2",
