--- a/serverless.yml
+++ b/serverless.yml
@@ -13,7 +13,7 @@ provider:
   environment:
     DEPLOY_STAGE: ${self:provider.stage}
     PUBLIC_HOSTNAME: ${self:custom.customDomain.http.domainName}
-    WEBSOCKET_HOSTNAME: ${self:custom.customDomain.websocket.domainName}
+    # WEBSOCKET_HOSTNAME: ${self:custom.customDomain.websocket.domainName}
     SYNC_SUBSCRIBER_QUEUE_TABLE: ${self:custom.syncSubscriberQueueTable}
     SUBSCRIBER_FOLLOWING_TABLE: ${self:custom.subscriberFollowingTable}
     FOLLOWED_BY_COUNT_TABLE: ${self:custom.followedByCountTable}
@@ -21,7 +21,7 @@ provider:
     APP_STATUS_TABLE: ${self:custom.appStatusTable}
     POSTS_TABLE: ${self:custom.postsTable}
     CONSOLE_SESSIONS_TABLE: ${self:custom.consoleSessionsTable}
-    WEBSOCKET_ENDPOINT: https://${self:custom.customDomain.websocket.domainName}
+    # WEBSOCKET_ENDPOINT: https://${self:custom.customDomain.websocket.domainName}
     BLUESKY_SERVICE_IDENTIFIER: ${self:custom.blueskyAuth.identifier}
     BLUESKY_SERVICE_USER_DID: ${ssm:/bluesky-feeds/${self:provider.stage}/service/user-did}
 
@@ -40,11 +40,11 @@ custom:
       endpointType: REGIONAL
       securityPolicy: tls_1_2
       apiType: http
-    websocket:
-      domainName: ${ssm:/bluesky-feeds/${self:provider.stage}/console/ws-domain-name}
-      certificateArn: ${ssm:/bluesky-feeds/${self:provider.stage}/certificate-arn}
-      securityPolicy: tls_1_2
-      endpointType: regional
+    # websocket:
+    #   domainName: ${ssm:/bluesky-feeds/${self:provider.stage}/console/ws-domain-name}
+    #   certificateArn: ${ssm:/bluesky-feeds/${self:provider.stage}/certificate-arn}
+    #   securityPolicy: tls_1_2
+    #   endpointType: regional
   syncSubscriberQueueTable: ${self:service}-${self:provider.stage}-sync-subscriber-queue
   subscriberFollowingTable: ${self:service}-${self:provider.stage}-subscriber-following
   followedByCountTable: ${self:service}-${self:provider.stage}-followed-by-count
@@ -129,11 +129,11 @@ functions:
     environment:
       BLUESKY_SERVICE_PASSWORD: ${self:custom.blueskyAuth.password}
     iamRoleStatements:
-      - Effect: Allow
-        Action:
-          - execute-api:ManageConnections
-        Resource:
-          - !Sub "arn:aws:execute-api:${aws:region}:${aws:accountId}:${WebsocketsApi}/${self:provider.stage}/POST/@connections/*"
+      # - Effect: Allow
+      #   Action:
+      #     - execute-api:ManageConnections
+      #   Resource:
+      #     - !Sub "arn:aws:execute-api:${aws:region}:${aws:accountId}:${WebsocketsApi}/${self:provider.stage}/POST/@connections/*"
       - Effect: "Allow"
         Action:
           - kms:GenerateRandom
