--- a/serverless.yml
+++ b/serverless.yml
@@ -19,6 +19,7 @@ provider:
     SUBSCRIBER_FOLLOWING_TABLE: ${self:custom.subscriberFollowingTable}
     FOLLOWED_BY_COUNT_TABLE: ${self:custom.followedByCountTable}
     MUTE_WORDS_TABLE: ${self:custom.muteWordsTable}
+    USER_SETTINGS_TABLE: ${self:custom.userSettingsTable}
     APP_STATUS_TABLE: ${self:custom.appStatusTable}
     POSTS_TABLE: ${self:custom.postsTable}
     CONSOLE_SESSIONS_TABLE: ${self:custom.consoleSessionsTable}
@@ -53,6 +54,7 @@ custom:
   subscriberFollowingTable: ${self:service}-${self:provider.stage}-subscriber-following
   followedByCountTable: ${self:service}-${self:provider.stage}-followed-by-count
   muteWordsTable: ${self:service}-${self:provider.stage}-mute-words
+  userSettingsTable: ${self:service}-${self:provider.stage}-user-settings
   appStatusTable: ${self:service}-${self:provider.stage}-app-status
   postsTable: ${self:service}-${self:provider.stage}-posts
   consoleSessionsTable: ${self:service}-${self:provider.stage}-console-sessions
@@ -111,10 +113,13 @@ functions:
       - Effect: "Allow"
         Action:
           - dynamodb:Query
+          - dynamodb:GetItem
           - dynamodb:PutItem
           - dynamodb:DeleteItem
+          - dynamodb:UpdateItem
         Resource:
           - !GetAtt MuteWordsTable.Arn
+          - !GetAtt UserSettingsTable.Arn
 
   bff-approval-listener:
     handler: ./src/endpoints/bff/approvalListener.handler
@@ -149,9 +154,11 @@ functions:
           - !GetAtt ConsoleSessionsTable.Arn
       - Effect: "Allow"
         Action:
+          - dynamodb:GetItem
           - dynamodb:Query
         Resource:
           - !GetAtt MuteWordsTable.Arn
+          - !GetAtt UserSettingsTable.Arn
 
   rotate-signing-key:
     handler: ./src/endpoints/rotate-signing-key/index.handler
@@ -197,6 +204,7 @@ functions:
           - dynamodb:GetItem
         Resource:
           - !GetAtt SubscriberFollowingTable.Arn
+          - !GetAtt UserSettingsTable.Arn
       - Effect: "Allow"
         Action:
           - dynamodb:BatchGetItem
@@ -444,6 +452,18 @@ resources:
             KeyType: HASH
           - AttributeName: muteWord
             KeyType: RANGE
+
+    UserSettingsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.userSettingsTable}
+        AttributeDefinitions:
+          - AttributeName: subscriberDid
+            AttributeType: S
+        BillingMode: PAY_PER_REQUEST
+        KeySchema:
+          - AttributeName: subscriberDid
+            KeyType: HASH
 
     AppStatusTable:
       Type: AWS::DynamoDB::Table
