--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "run-p tailwind:watch start:serverless",
     "deploy:public": "npm run tailwind:build && eval \"$(node setEnv.js)\" && aws s3 sync public/ s3://${CONTENT_BUCKET}/bluesky-feeds-web/${TARGET_STAGE}/static/ --cache-control 'max-age=31536000' --exclude 'mutebot.dev.css'",
     "deploy:development": "TARGET_STAGE=development npm run deploy:public && serverless deploy --stage development",
-    "deploy:production": "TARGET_STAGE=production npm run deploy:public && serverless deploy --stage production"
+    "deploy:production": "TARGET_STAGE=production npm run deploy:public && serverless deploy --stage production",
+    "package:datefns": "npx webpack --config datefns-webpack.config.js"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -24,6 +25,7 @@
     "@types/ws": "^8.5.6",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "babel-loader": "^9.1.3",
     "ejs": "^3.1.9",
     "eslint": "^8.50.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -38,7 +40,8 @@
     "serverless-prune-plugin": "^2.0.2",
     "tailwindcss": "^3.3.5",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@atproto/api": "^0.6.16",
