--- a/serverless.yml
+++ b/serverless.yml
@@ -83,6 +83,7 @@ functions:
     handler: ./src/endpoints/bff/web.handler
     events:
       - httpApi: GET /
+      - httpApi: GET /retweet-settings
       - httpApi: POST /login/session
       - httpApi: GET /login/session/auth-code
       - httpApi: GET /login/session/approval
@@ -116,6 +117,11 @@ functions:
           - dynamodb:UpdateItem
         Resource:
           - !GetAtt UserSettingsTable.Arn
+      - Effect: "Allow"
+        Action:
+          - dynamodb:GetItem
+        Resource:
+          - !GetAtt SubscriberFollowingTable.Arn
 
   bff-approval-listener:
     handler: ./src/endpoints/bff/approvalListener.handler
