--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "p-queue": "^6.6.2",
     "preact-render-to-string": "^6.2.2",
     "serverless-plugin-log-retention": "^2.0.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   }
 }
