Filter kikorangi through mutebot

--- a/serverless.yml
+++ b/serverless.yml
@@ -63,6 +63,7 @@ custom:
     password: ${ssm:/bluesky-feeds/${self:provider.stage}/service/password}
   followingFeedUrl: ${ssm:/bluesky-feeds/${self:provider.stage}/following-feed-url}
   betaFollowingFeedUrl: ${ssm:/bluesky-feeds/${self:provider.stage}/beta-following-feed-url}
+  kikorangiFeedUrl: ${ssm:/bluesky-feeds/${self:provider.stage}/kikorangi-feed-url}
   ssmEnvironmentBaseArn: 'arn:aws:ssm:${aws:region}:${aws:accountId}:parameter/bluesky-feeds/${self:provider.stage}'
   enablePolling:
     development: false
@@ -198,6 +199,7 @@ functions:
     environment:
       FOLLOWING_FEED_URL: ${self:custom.followingFeedUrl}
       BETA_FOLLOWING_FEED_URL: ${self:custom.betaFollowingFeedUrl}
+      KIKORANGI_FEED_URL: ${self:custom.kikorangiFeedUrl}
       BLUESKY_SERVICE_PASSWORD: ${self:custom.blueskyAuth.password}
     iamRoleStatements:
       - Effect: "Allow"
